public class SousTache extends Tache {
    public SousTache(String nom, String description, int numTache) {
        super(nom, description, numTache);
    }
}
